# VLab4Mic

./: .gitignore  .pre-commit-config.yaml  .python_repo_template.toml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  index.html  makefile  manual.md  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request.md
.github/workflows/: build_deploy_pypi.yml  docs_build_deploy.yml  notebooks_smoke_test.yml  package_build.yml  package_build_test_oncall.yml  package_test_nightly.yml  package_test_nightly_windows.yml  package_test_windows.yml
changelog/: index.html
data/detector/: _template.yaml
data/fluorophores/: _template.yaml
data/labels/: _template.yaml
data/modalities/: _template.yaml
data/psfs/: _template.yaml
data/structures/: 2RCJ.yaml  7N85.yaml  7R5K.yaml  _template.yaml
docs/: README.md  download.md  examples.md  getting-started.md  index.html  index.md  methods.md  notebooks.md  parameters.md  python-usage.md  search.js  supramolsim.html  templates.md  vlab4mic.html
docs/supramolsim/: analysis.html  configuration.html  download.html  experiments.html  generate.html  jupyter_widgets.html  utils.html  workflows.html
docs/supramolsim/analysis/: metrics.html  scripts.html
docs/supramolsim/configuration/: detector.html  fluorophores.html  labels.html  modalities.html  psfs.html  structures.html
docs/supramolsim/generate/: coordinates_field.html  imaging.html  labelled_instance.html  labels.html  molecular_structure.html  psfs.html
docs/supramolsim/jupyter_widgets/: custom_widgets.html
docs/supramolsim/utils/: data_format.html  io.html  sample.html  transform.html  visualisation.html
docs/supramolsim/utils/data_format/: configuration_format.html  structural_format.html  visualisation.html
docs/supramolsim/utils/io/: text.html  tiff.html  yaml_functions.html
docs/supramolsim/utils/sample/: arrays.html
docs/supramolsim/utils/transform/: cif_builder.html  datatype.html  defects.html  image_convolution.html  noise.html  normals.html  (+1 more)
docs/vlab4mic/: analysis.html  configs.html  download.html  experiments.html  generate.html  jupyter_widgets.html  sweep_generator.html  utils.html  workflows.html
docs/vlab4mic/analysis/: _plots.html  metrics.html  sweep.html
docs/vlab4mic/configs/: acquisition.html  fluorophores.html  modalities.html  probes.html  structures.html  virtualsample.html
docs/vlab4mic/generate/: coordinates_field.html  imaging.html  labelled_instance.html  labels.html  molecular_structure.html  psfs.html
docs/vlab4mic/jupyter_widgets/: _experiment_parameters.html  _experiment_visualisation.html  _widget_generator.html  experiment_widgets.html  sweep_parameters_widgets.html
docs/vlab4mic/utils/: data_format.html  io.html  sample.html  transform.html  visualisation.html
examples/: custom_structure.py  image_virtual_sample.py  index.html  parameter_sweep.py  readme.md  real_vs_simulation.py
examples/article_figures/: fig1_hiv_examples.py  fig2E.py  fig2_EF.py  fig2_npc_panel.py  fig3B.py  fig3F.py  fig3_abc_panels.py  fig3_c_efficiency_integrity.py  fig3_de_panels.py  fig3_primary_secondary.py  fig4_ccs.py  figS_LabEff_hindrance.py  figS_NPC_quantification.py  figS_NPC_quantification_smlm.py  figS_alphafold_from_localfile.py  figS_depth_of_field.py  figS_image_for_positioning.py  figS_localisation_simulation_ccs.py  figS_multicolour.py  figS_multiple_structures.py  figS_primaryandsecondary.py  figS_probe_examples.py  figS_site_specific_labelling.py  figS_structural_integrity.py  figS_structure_normals_and_probe_positioning.py  figS_structure_parsing_and_targets.py
getting-started/: index.html
methods/: index.html
notebooks/: VLab4Mic_main.ipynb  VLab4Mic_main_interphase.ipynb  VLab4Mic_parameter_sweeps.ipynb  analysis_workflow.ipynb  basic_demo.ipynb  codeless_demo.ipynb  index.html  parameter_sweep_analysis.ipynb  script_demo.ipynb  script_demo_NPC.ipynb  script_demo_primary.ipynb  vLab4Mic_acquire_sample.ipynb  vLab4Mic_main.ipynb  vLab4Mic_parameter_sweep.ipynb
notebooks/Example_outputs/: FitCircles_experimental2simulation.ipynb  Indirect_labelling.ipynb  NPC_multimomodal.ipynb  analysis_example.ipynb  script_HIV.ipynb  script_NPC.ipynb  script_demo_HIV.html
notebooks/scripts/: custom_structure.py  fig2E.py  fig3B.py
parameters/: index.html
python-usage/: index.html
search/: search_index.json
src/supra_molecular_simulator/: download.py
src/supramolsim/: __init__.py  download.py  experiments.py  sweep_generator.py  workflows.py
src/supramolsim/analysis/: _plots.py  _tmp.py  metrics.py  scripts.py  sweep.py
src/supramolsim/configs/: parameter_settings.yaml
src/supramolsim/generate/: coordinates_field.py  experiments.py  imaging.py  labelled_instance.py  labels.py  molecular_structure.py
src/supramolsim/jupyter_widgets/: _experiment_parameters.py  _experiment_visualisation.py  _sweep_widgets.py  custom_widgets.py  experiment_widgets.py  parameter_selection.py  sweep_parameters_widgets.py  sweep_widgets.py  visualisation.py  widget_generator.py  widgets_dataclass.py
src/vlab4mic/: __init__.py  download.py  experiments.py  sweep_generator.py  workflows.py
src/vlab4mic/analysis/: _plots.py  metrics.py  sweep.py
src/vlab4mic/configs/: parameter_settings.yaml
src/vlab4mic/generate/: coordinates_field.py  imaging.py  labelled_instance.py  labels.py  molecular_structure.py  psfs.py
src/vlab4mic/jupyter_widgets/: _experiment_parameters.py  _experiment_visualisation.py  experiment_widgets.py  sweep_parameters_widgets.py
src/vlab4mic/utils/: __opencl__.py
stylesheets/: extra.css
supra_molecular_simulator/: download.py
templates/: index.html
tests/: conftest.py  test_analysis_scripts.py  test_coordinate_field.py  test_download.py  test_experiment.py  test_feature_defects.py  test_image_generation.py  test_incomplete_labelling.py  test_labelledparticles.py  test_labels.py  test_load_pdbcif.py  test_reproducibility.py  test_sequential_labelling.py  test_sweep_generator_state.py  test_sweeps.py
(+133 files in other folders)
