[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlab4mic"
version = "0.1.0"
description = "VLab4Mic: A virtual laboratory for microscopy simulation and validation"
authors = [
    { name = "Damián Martínez", email = "jdmartinezigc@gmail.com" },
    { name = "Bruno M. Saraiva", email = "bruno.msaraiva2@gmail.com" },
    { name = "Mario Del Rosario", email = "mario.delrosario@itqb.unl.pt" },
    { name = "Ricardo Henriques", email = "ricardo@henriqueslab.org" }
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "scipy>=1.13.1",
    "biopython>=1.83",
    "pyyaml>=6.0.1",
    "tifffile>=2024.5.22",
    "tqdm>=4.66.4",
    "scikit-image>=0.23.2",
    "requests>=2.32.3",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.2",
    "opencv-python>=4.11",
    "ipython>=7.9.0"
]

[project.optional-dependencies]
all = ["vlab4mic[dev,test,notebooks]"]
notebooks = [
    "vlab4micjupyter"
]
dev = [
    "pre-commit>=3.7.0",
    "ruff>=0.4.3",
    "gptrepo>=1.0.3",
    "build"
]
test = [
    "pytest>=8.2.0",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=5.0.0",
    "nbmake>=1.5.3",
    "mypy>=1.10.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.coverage.run]
source = ["src/vlab4mic"]
omit = [
    "*__init__.py",
    "*__*.py"
]

[project.scripts]
download-structures = "vlab4mic.download:download_suggested_structures"

[tool.pytest.ini_options]
markers = [
    "network: marks tests that require network access to download structure files (skip with --no-network)",
]

[project.urls]
Homepage = "https://github.com/HenriquesLab/VLab4Mic"
Repository = "https://github.com/HenriquesLab/VLab4Mic"
Documentation = "https://vlab4mic.henriqueslab.org/"
Issues = "https://github.com/HenriquesLab/VLab4Mic/issues"
